force-app/main/default/objects/Price__c/Price__c.object-meta.xml
<CustomObject>
    <label>Price</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Price Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>