force-app/main/default/objects/Price__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only used for Raw Glass and Concore to link to the account for which this price is defined. The account should be the corporate level account.</description>
    <inlineHelpText>Only used for Raw Glass and Concore to link to the account for which this price is defined. The account should be the corporate level account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <type>Lookup</type>
</CustomField>