force-app/main/default/objects/Price__c/fields/accountValid__c.field-meta.xml
<CustomField>
    <fullName>accountValid__c</fullName>
    <formula>BEGINS(extId__c, account__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Account Valid</label>
    <type>Checkbox</type>
</CustomField>