force-app/main/default/objects/Price__c/fields/availableTo__c.field-meta.xml
<CustomField>
    <fullName>availableTo__c</fullName>
    <description>Used to control price record visibility in sharing rules</description>
    <inlineHelpText>Used to control price record visibility in sharing rules</inlineHelpText>
    <label>Available to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Customers</fullName>
                <default>true</default>
                <label>All Customers</label>
            </value>
            <value>
                <fullName>Blue Only</fullName>
            </value>
            <value>
                <fullName>Non-finisher AMs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>