force-app/main/default/objects/Price__c/fields/extId__c.field-meta.xml
<CustomField>
    <fullName>extId__c</fullName>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>