force-app/main/default/objects/Price__c/fields/isInventory__c.field-meta.xml
<CustomField>
    <fullName>isInventory__c</fullName>
    <formula>product__r.isInventory__c</formula>
    <label>IsInventory</label>
    <type>Checkbox</type>
</CustomField>