force-app/main/default/objects/Price__c/fields/isMTO__c.field-meta.xml
<CustomField>
    <fullName>isMTO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for sharing rules and updated via trigger. Was previously a formula pulling down the value from Product.</description>
    <label>Is MTO</label>
    <type>Checkbox</type>
</CustomField>