force-app/main/default/objects/Price__c/fields/isProductActive__c.field-meta.xml
<CustomField>
    <fullName>isProductActive__c</fullName>
    <formula>product__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Product Active</label>
    <type>Checkbox</type>
</CustomField>