force-app/main/default/objects/Price__c/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <formula>product__r.isStandard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsStandard</label>
    <type>Checkbox</type>
</CustomField>