force-app/main/default/objects/Price__c/fields/mpQuotePrice2__c.field-meta.xml
<CustomField>
    <fullName>mpQuotePrice2__c</fullName>
    <label>MP Accepted Price 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>