force-app/main/default/objects/Price__c/fields/mpQuotePrice3__c.field-meta.xml
<CustomField>
    <fullName>mpQuotePrice3__c</fullName>
    <label>MP Accepted Price 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>