force-app/main/default/objects/Price__c/fields/Non_Expiry_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Expiry_Price__c</fullName>
    <formula>Begins( product__r.Name ,&apos;ST&apos;)  || Begins( product__r.Name,&apos;Inventory&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Expiration Product</label>
    <type>Checkbox</type>
</CustomField>