force-app/main/default/objects/Price__c/fields/numberOfTiers__c.field-meta.xml
<CustomField>
    <fullName>numberOfTiers__c</fullName>
    <formula>IF((price1__c &gt; 0 &amp;&amp; price2__c &gt; 0 &amp;&amp; price3__c &gt; 0 &amp;&amp; price4__c &gt; 0), 4, IF((price1__c &gt; 0 &amp;&amp; price2__c &gt; 0 &amp;&amp; price3__c &gt; 0 &amp;&amp; NOT(price4__c &gt; 0)), 3, IF((price1__c &gt; 0 &amp;&amp; price2__c &gt; 0 &amp;&amp; NOT(price3__c &gt; 0) &amp;&amp; price4__c &gt; 0), 3, IF((price1__c &gt; 0 &amp;&amp; NOT(price2__c &gt; 0) &amp;&amp; price3__c &gt; 0 &amp;&amp; price4__c &gt; 0), 3, IF((NOT(price1__c &gt; 0) &amp;&amp; price2__c &gt; 0 &amp;&amp; price3__c &gt; 0 &amp;&amp; price4__c &gt; 0), 3, IF((price1__c &gt; 0 &amp;&amp; price2__c &gt; 0 &amp;&amp; NOT(price3__c &gt; 0) &amp;&amp; NOT(price4__c &gt; 0)), 2, IF((NOT(price1__c &gt; 0) &amp;&amp; NOT(price2__c &gt; 0) &amp;&amp; price3__c &gt; 0 &amp;&amp; price4__c &gt; 0), 2, IF((price1__c &gt; 0 &amp;&amp; NOT(price2__c &gt; 0) &amp;&amp; price3__c &gt; 0 &amp;&amp; NOT(price4__c &gt; 0)), 2, IF((price1__c &gt; 0 &amp;&amp; NOT(price2__c &gt; 0) &amp;&amp; NOT(price3__c &gt; 0) &amp;&amp; price4__c &gt; 0), 2, IF((NOT(price1__c &gt; 0) &amp;&amp; price2__c &gt; 0 &amp;&amp; price3__c &gt; 0 &amp;&amp; NOT(price4__c &gt; 0)), 2, IF((NOT(price1__c &gt; 0) &amp;&amp; price2__c &gt; 0 &amp;&amp; NOT(price3__c &gt; 0) &amp;&amp; price4__c &gt; 0), 2, IF((price1__c &gt; 0 &amp;&amp; NOT(price2__c &gt; 0) &amp;&amp; NOT(price3__c &gt; 0) &amp;&amp; NOT(price4__c &gt; 0)), 1, IF((NOT(price1__c &gt; 0) &amp;&amp; price2__c &gt; 0 &amp;&amp; NOT(price3__c &gt; 0) &amp;&amp; NOT(price4__c &gt; 0)), 1, IF((NOT(price1__c &gt; 0) &amp;&amp; NOT(price2__c &gt; 0) &amp;&amp; price3__c &gt; 0 &amp;&amp; NOT(price4__c &gt; 0)), 1, IF((NOT(price1__c &gt; 0) &amp;&amp; NOT(price2__c &gt; 0) &amp;&amp; NOT(price3__c &gt; 0) &amp;&amp; price4__c &gt; 0), 1, IF((NOT(price1__c &gt; 0) &amp;&amp; NOT(price2__c &gt; 0) &amp;&amp; NOT(price3__c &gt; 0) &amp;&amp; NOT(price4__c &gt; 0)), 0, 0))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Tiers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>