force-app/main/default/objects/Price__c/fields/originalPrice1__c.field-meta.xml
<CustomField>
    <fullName>originalPrice1__c</fullName>
    <label>Original Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>