force-app/main/default/objects/Price__c/fields/originalPrice2__c.field-meta.xml
<CustomField>
    <fullName>originalPrice2__c</fullName>
    <label>Original Price 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>