force-app/main/default/objects/Price__c/fields/originalPrice3__c.field-meta.xml
<CustomField>
    <fullName>originalPrice3__c</fullName>
    <label>Original Price 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>