force-app/main/default/objects/Price__c/fields/originalPriceUnit__c.field-meta.xml
<CustomField>
    <fullName>originalPriceUnit__c</fullName>
    <label>Original Price/Unit (with Shipping)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>