force-app/main/default/objects/Price__c/fields/originalSamplePrice__c.field-meta.xml
<CustomField>
    <fullName>originalSamplePrice__c</fullName>
    <label>Original Sample Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>