force-app/main/default/objects/Price__c/fields/price1__c.field-meta.xml
<CustomField>
    <fullName>price1__c</fullName>
    <description>Parts price for mass production tier 1.</description>
    <inlineHelpText>Parts price for mass production tier 1.</inlineHelpText>
    <label>Price1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>