force-app/main/default/objects/Price__c/fields/price2__c.field-meta.xml
<CustomField>
    <fullName>price2__c</fullName>
    <description>Parts price for mass production tier 2.</description>
    <inlineHelpText>Parts price for mass production tier 2.</inlineHelpText>
    <label>Price2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>