force-app/main/default/objects/Price__c/fields/price3__c.field-meta.xml
<CustomField>
    <fullName>price3__c</fullName>
    <description>Parts price for mass production tier 3.</description>
    <inlineHelpText>Parts price for mass production tier 3.</inlineHelpText>
    <label>Price3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>