force-app/main/default/objects/Price__c/fields/priceApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>priceApprovalDate__c</fullName>
    <description>Price approval date. Used in quotes to ensure price is still valid.</description>
    <inlineHelpText>Price approval date. Used in quotes to ensure price is still valid.</inlineHelpText>
    <label>Price Approval Date</label>
    <type>Date</type>
</CustomField>