force-app/main/default/objects/Price__c/fields/priceExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>priceExpirationDate__c</fullName>
    <description>Date when this price expires. By default this date is set via a workflow on the price object but can be overwritten.</description>
    <inlineHelpText>Date when this price expires. By default this date is set via a workflow on the price object but can be overwritten.</inlineHelpText>
    <label>Price Expiration Date</label>
    <type>Date</type>
</CustomField>