force-app/main/default/objects/Price__c/fields/priceExpired__c.field-meta.xml
<CustomField>
    <fullName>priceExpired__c</fullName>
    <description>Has price expired?</description>
    <formula>TODAY() &gt;  priceExpirationDate__c  &amp;&amp;   NOT(BEGINS(product__r.Name,&apos;ST&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Has price expired?</inlineHelpText>
    <label>Has Price Expired</label>
    <type>Checkbox</type>
</CustomField>