force-app/main/default/objects/Price__c/fields/priceIncludesShipping__c.field-meta.xml
<CustomField>
    <fullName>priceIncludesShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Includes Shipping</label>
    <type>Checkbox</type>
</CustomField>