force-app/main/default/objects/Price__c/fields/priceUnit__c.field-meta.xml
<CustomField>
    <fullName>priceUnit__c</fullName>
    <description>Price/unit</description>
    <inlineHelpText>Price/unit</inlineHelpText>
    <label>Price/Unit (with Shipping)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>