force-app/main/default/objects/Price__c/fields/pricingApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>pricingApprovalStatus__c</fullName>
    <description>Pricing approval status - will be set to blank when someone tries to create a quote with parts line items and the pricing is more than 30 days old</description>
    <inlineHelpText>Pricing approval status - will be set to blank when someone tries to create a quote with parts line items and the pricing is more than 30 days old</inlineHelpText>
    <label>Pricing Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>