force-app/main/default/objects/Price__c/fields/pricingChanged__c.field-meta.xml
<CustomField>
    <fullName>pricingChanged__c</fullName>
    <formula>IF(  OR(originalPrice1__c  &lt;&gt;  price1__c, originalPrice2__c  &lt;&gt;  price2__c, originalPrice3__c  &lt;&gt;  price3__c, originalPrice4__c  &lt;&gt;  price4__c, originalPriceUnit__c &lt;&gt;  priceUnit__c ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Changed</label>
    <type>Checkbox</type>
</CustomField>