force-app/main/default/objects/Price__c/fields/productFamily__c.field-meta.xml
<CustomField>
    <fullName>productFamily__c</fullName>
    <description>Used in sharing rule and updated via trigger.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Raw Glass</fullName>
            </value>
            <value>
                <fullName>Concore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>