force-app/main/default/objects/Price__c/fields/quantityRange1__c.field-meta.xml
<CustomField>
    <fullName>quantityRange1__c</fullName>
    <formula>IF(product__r.MOQ__c &lt; 1, &apos;&apos;, TEXT(product__r.MOQ__c)) + &apos; - &apos; + IF(upperLimit1__c &lt; 1, &apos;&apos;, TEXT(upperLimit1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Range 1</label>
    <type>Text</type>
</CustomField>