force-app/main/default/objects/Price__c/fields/quantityRange2__c.field-meta.xml
<CustomField>
    <fullName>quantityRange2__c</fullName>
    <formula>IF(upperLimit1__c &lt; 1, &apos;&apos;, TEXT(upperLimit1__c + 1)) + &apos; - &apos; + IF(upperLimit2__c &lt; 1, &apos;&apos;, TEXT(upperLimit2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Range 2</label>
    <type>Text</type>
</CustomField>