force-app/main/default/objects/Price__c/fields/quantityRange3__c.field-meta.xml
<CustomField>
    <fullName>quantityRange3__c</fullName>
    <formula>IF(upperLimit2__c &lt; 1, &apos;&apos;, TEXT(upperLimit2__c + 1)) + &apos; - &apos; + IF(upperLimit3__c &lt; 1, &apos;&apos;, TEXT(upperLimit3__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Range 3</label>
    <type>Text</type>
</CustomField>