force-app/main/default/objects/Price__c/fields/samplePrice__c.field-meta.xml
<CustomField>
    <fullName>samplePrice__c</fullName>
    <label>Sample Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>