force-app/main/default/objects/Price__c/fields/sampleRange__c.field-meta.xml
<CustomField>
    <fullName>sampleRange__c</fullName>
    <formula>IF(!isBlank(product__r.sampleMOQ__c), TEXT(product__r.sampleMOQ__c) + &apos; - &apos; + TEXT(product__r.MOQ__c - 1) + &apos;** Samples&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Range</label>
    <type>Text</type>
</CustomField>