force-app/main/default/objects/Price__c/fields/searchText__c.field-meta.xml
<CustomField>
    <fullName>searchText__c</fullName>
    <description>Search text for product search. A combination of product name, length, width, glass composition. This field is set through workflow.</description>
    <inlineHelpText>Search text for product search. A combination of product name, length, width, glass composition. This field is set through workflow.</inlineHelpText>
    <label>SearchText (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>