force-app/main/default/objects/Price__c/fields/shippingPrice__c.field-meta.xml
<CustomField>
    <fullName>shippingPrice__c</fullName>
    <label>Shipping Price (per Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>