force-app/main/default/objects/Price__c/fields/specification__c.field-meta.xml
<CustomField>
    <fullName>specification__c</fullName>
    <formula>product__r.specification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specification</label>
    <type>Text</type>
</CustomField>