force-app/main/default/objects/Price__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Unit of measure for MOQ</description>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MoqUom</valueSetName>
    </valueSet>
</CustomField>