force-app/main/default/objects/Price__c/fields/unitPrice__c.field-meta.xml
<CustomField>
    <fullName>unitPrice__c</fullName>
    <label>Unit Price (w/o Shipping)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>