force-app/main/default/objects/Price__c/fields/upperLimit1__c.field-meta.xml
<CustomField>
    <fullName>upperLimit1__c</fullName>
    <description>Parts pricing: Upper limit for the pricing tier 1.</description>
    <inlineHelpText>Parts pricing: Upper limit for the pricing tier 1.</inlineHelpText>
    <label>Upper Limit1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>