force-app/main/default/objects/Price__c/fields/upperLimit2__c.field-meta.xml
<CustomField>
    <fullName>upperLimit2__c</fullName>
    <description>Parts pricing: Upper limit for the pricing tier 2.</description>
    <inlineHelpText>Parts pricing: Upper limit for the pricing tier 2.</inlineHelpText>
    <label>Upper Limit2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>