force-app/main/default/objects/Price__c/fields/upperLimit3__c.field-meta.xml
<CustomField>
    <fullName>upperLimit3__c</fullName>
    <description>Parts pricing: Upper limit for the pricing tier 3.</description>
    <inlineHelpText>Parts pricing: Upper limit for the pricing tier 3.</inlineHelpText>
    <label>Upper Limit3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>