force-app/main/default/objects/Price__c/validationRules/Product_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>IsBlank(product__c)</errorConditionFormula>
    <errorMessage>Must select a product to save price.</errorMessage>
</ValidationRule>