force-app/main/default/objects/Price__c/listViews/MTO_Prices.listView-meta.xml
<ListView>
    <fullName>MTO_Prices</fullName>
    <columns>NAME</columns>
    <columns>product__c</columns>
    <columns>priceExpirationDate__c</columns>
    <columns>price1__c</columns>
    <columns>price2__c</columns>
    <columns>price3__c</columns>
    <columns>price4__c</columns>
    <columns>Unit__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>availableTo__c</field>
        <operation>equals</operation>
        <value>All Customers</value>
    </filters>
    <filters>
        <field>productFamily__c</field>
        <operation>equals</operation>
        <value>Raw Glass</value>
    </filters>
    <filters>
        <field>isMTO__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MTO Prices</label>
    <language>en_US</language>
</ListView>