force-app/main/default/objects/Price__c/listViews/Non_Blue_Prices.listView-meta.xml
<ListView>
    <fullName>Non_Blue_Prices</fullName>
    <columns>NAME</columns>
    <columns>product__c</columns>
    <columns>account__c</columns>
    <columns>priceExpirationDate__c</columns>
    <columns>priceIncludesShipping__c</columns>
    <columns>unitPrice__c</columns>
    <columns>shippingPrice__c</columns>
    <columns>priceUnit__c</columns>
    <columns>Unit__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>availableTo__c</field>
        <operation>equals</operation>
        <value>All Customers</value>
    </filters>
    <filters>
        <field>productFamily__c</field>
        <operation>equals</operation>
        <value>Raw Glass</value>
    </filters>
    <label>Non Blue Prices</label>
    <language>en_US</language>
</ListView>