force-app/main/default/objects/Price__c/listViews/Parts_Prices.listView-meta.xml
<ListView>
    <fullName>Parts_Prices</fullName>
    <columns>NAME</columns>
    <columns>product__c</columns>
    <columns>price1__c</columns>
    <columns>price2__c</columns>
    <columns>price3__c</columns>
    <columns>price4__c</columns>
    <columns>samplePrice__c</columns>
    <columns>originalPrice1__c</columns>
    <columns>originalPrice2__c</columns>
    <columns>originalPrice3__c</columns>
    <columns>originalPrice4__c</columns>
    <columns>originalSamplePrice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>availableTo__c</field>
        <operation>equals</operation>
        <value>All Customers</value>
    </filters>
    <filters>
        <field>productFamily__c</field>
        <operation>equals</operation>
        <value>Parts</value>
    </filters>
    <label>Parts Prices</label>
    <language>en_US</language>
</ListView>